feat: 新增DotFile文档，介绍Chezmoi的安装、配置和使用方法，以及不同系统的差异化配置

--- a/docs/Python/面向对象.md
+++ b/docs/Python/面向对象.md
@@ -1,5 +1,10 @@
 # 面向对象
 
+## 类型
+
+- `isinstance(<object>, <type>)`：测试对象是否是某种类型
+- `type(<object>)`：返回对象的类型
+
 ## 类 (Class)
 
 定义了特定类型的对象如何行为的**模板或蓝图**
@@ -36,6 +41,18 @@ class ClassName:
 
 对象.方法实际上是一个方法（当不加括号时，被评估为bound method）。可以把它赋值给另一个变量，然后通过该变量调用。而类.方法则是一个函数，需要传入实例对象作为第一个参数。
 
+### 特殊方法
+
+特殊方法（也称为魔术方法）是以双下划线开头和结尾的方法，是Python预定义的方法，但是也可以在类中自行修改，用于实现类的特定行为。例如：
+
+- `__add__(self, other)`: 定义（左侧）加法运算符 `+` 的行为。
+- `__radd__(self, other)`: 定义右侧加法运算符 `+` 的行为。
+- `__bool__(self)`: 定义对象的布尔值，用于条件判断。
+- `__float__(self)`: 定义对象转换为浮点数的行为。
+- `__repr__(self)`: 定义对象的字符串表示。用`repr()` 函数调用。
+- `__str__(self)`: 定义对象的用户友好字符串表示。用`str()`、`print()`、`format()`函数调用。
+
+
 ## 继承
 
 类可以从另一个类继承属性和方法。子类继承父类的所有属性和方法，可以重写父类的方法以提供特定实现。满足is-a关系的类之间可以使用继承。例如：
@@ -47,6 +64,8 @@ class Parent:
 class Child(Parent):
     def method(self):
         # 重写父类的方法
+    def __init__(self):
+        super().__init__()  # super():找父类  __init__找父类的__init__函数  (<iter>)传入子类的参数
 ```
 
 ## 组合
@@ -129,3 +148,25 @@ print(next(counter))  # 输出: 3
 ```
 
 `yield from <iterable>` 语句：用于在生成器函数中委托子生成器或可迭代对象。
+
+## 包装器
+
+- `repr(obj)`: 返回对象的字符串表示。
+
+`repr()` 的实际执行过程：从实例调用 `x.__repr__()` 时，Python 会自动把 x 作为第一个参数（即 self）传进去；从类调用时，它是一个普通的函数（类中的函数）。因为它不知道要处理哪个具体的实例，所以必须手动把实例 x 传进去，即`type(obj).__repr__(obj)`，相当于传入了`self`。
+
+- `eval(obj)`：将对象看作代码执行。`eval(repr(obj))` 通常会返回与 `obj` 相等的对象（`repr()`返回字符串，`eval()`执行）。
+
+- `str(obj)`: 返回对象的用户友好字符串表示，适合打印输出查看。`str()` 的实际执行过程是调用对象的 `__str__()` 方法。
+
+例如：`repr(Fraction(1, 3))` 返回 `'Fraction(1, 3)'`，而 `str(Fraction(1, 3))` 返回 `'1/3'`。`repr`，`str`是`print()`函数的输出
+
+## 接口
+
+接口是类对外提供的功能和行为的集合。通过定义清晰的接口，类可以隐藏其内部实现细节，只暴露必要的方法和属性给外部使用者。
+
+消息传递（Message Passing）： 对象之间通过查找属性（调用方法）来交互。向一个对象“发送消息”（调用它的方法），它给你回馈。
+
+抽象的方法： 当不同的类（比如“分数类”和“复数类”）都拥有同名的属性或方法时，这就是一种抽象。
+
+接口的本质： 接口是一组共享的消息（方法名）以及对这些消息含义的规定。
