--- a/docs/Python/数据结构.md
+++ b/docs/Python/数据结构.md
@@ -16,10 +16,15 @@
 - 排序： `<list>.sort(key=function, reverse=bool)` 就地排序，修改原列表
 - 反转： `<list>.reverse()` 就地反转，修改原列表
 - 延展列表： `<list>.extend(<iterable>)` 将可迭代对象的元素添加到列表末尾
+- 连接：`<char>.join(<list>)` 将列表中的字符串连接成一个字符串，元素之间用指定字符`<char>`分隔
 
 ## 字符串
 
 - 转义字符： `\n` 换行， `\t` 制表符， `\\` 反斜杠， `\'` 单引号， `\"` 双引号
+
+- f字符串：在字符串前加 `f` 或 `F`，可以在字符串中嵌入表达式，表达式用花括号 `{}` 包围。
+
+注意：字符串本身（在Python里）是不带引号的，只有在表示字符串的代码里才需要引号。
 
 ## 字典
 
@@ -54,7 +59,7 @@ numer(x)/denom(x)=n/d
 
 ## 树
 
-树是一种递归的数据结构，由节点（node）和边（edge）组成。每个节点包含一个值（label）和指向其子节点的引用。树的顶端节点称为根节点（root），没有子节点的节点称为叶节点（leaf）。
+树是一种递归的数据结构，由节点（node）和边（edge）组成。每个节点包含一个值（label）和指向其子节点的引用，节点有`parent`和`child`属性。树的顶端节点称为根节点（root），没有子节点的节点称为叶节点（leaf）。
 
 > 一棵树是一个 Python `list`，第 0 个元素是 `label`，后续元素都是子树（branches）。
 
@@ -99,3 +104,7 @@ def is_leaf(tree):
 ```
 
 - 判断一个对象是否符合“树 ADT”的表示不变式（representation invariant），让构造器、调试、边界检查更可靠。
+
+## 链表
+
+链表是一种线性数据结构，由节点（node）组成，每个节点是一个`link`实例，包含一个值（value/first）和指向下一个节点的引用（next/rest->node）。链表的第一个节点称为头节点（head），最后一个节点的 next 引用为 None，具有`link.empty`属性，表示链表的结束。
