--- a/docs/Python/数据结构.md
+++ b/docs/Python/数据结构.md
@@ -108,3 +108,17 @@ def is_leaf(tree):
 ## 链表
 
 链表是一种线性数据结构，由节点（node）组成，每个节点是一个`link`实例，包含一个值（value/first）和指向下一个节点的引用（next/rest->node）。链表的第一个节点称为头节点（head），最后一个节点的 next 引用为 None，具有`link.empty`属性，表示链表的结束。
+
+## 缓存
+
+缓存是一种存储数据的机制，用于提高数据访问速度。通过将频繁访问的数据存储在快速存取的存储介质中，减少重复计算次数，从而提升性能。下面是记忆化的一个简单实现：
+
+```python
+def memo(f):
+    cache = {}
+    def memoized(*args):
+        if args  not in cache:
+            cache[args] = f(*args)
+        return cache[args]
+    return memoized
+```
