feat: 新增时间复杂度和快速幂的详细说明，添加有序列表查找的双指针方法示例；新增Python变量查找顺序及相关示例；新增Scheme语言的基本表达式和函数定义与调用的详细介绍；新增U卡的KYC身份审核流程及注意事项。

--- a/docs/Python/函数.md
+++ b/docs/Python/函数.md
@@ -237,3 +237,17 @@ def factorial(f, n):
 ```
 
 当使用`lambda_f(factorial)(n)`时，它会先返回`lambda_x`，然后运行`lambda_x(n)`，即`factorial(factorial, n)`从而使得参数f始终为`factorial`函数本身，实现递归调用。
+
+## 变量
+
+Python 查找变量时，会按照这个固定的顺序（LEGB）：
+
+- L (Local) 局部作用域：当前函数 __init__ 内部。
+
+- E (Enclosing) 嵌套作用域：如果函数套在另一个函数里。
+
+- G (Global) 全局作用域：模块（文件）顶层定义的变量。
+
+- B (Built-in) 内置作用域：Python 自带的函数（比如 len, str）。
+
+- 注意：这个列表中没有“类作用域” (Class Scope)。
