--- a/docs/Python/数据结构.md
+++ b/docs/Python/数据结构.md
@@ -15,8 +15,10 @@
 - 计数： `<list>.count(<element>)` 返回元素在列表中出现的次数
 - 排序： `<list>.sort(key=function, reverse=bool)` 就地排序，修改原列表
 - 反转： `<list>.reverse()` 就地反转，修改原列表
-- 延展列表： `<list>.extend(<iterable>)` 将可迭代对象的元素添加到列表末尾
+- 延展列表： `<list>.extend(<iterable>)` 将元素添加到列表末尾
 - 连接：`<char>.join(<list>)` 将列表中的字符串连接成一个字符串，元素之间用指定字符`<char>`分隔
+- all()：`all(<iterable>)` 如果 iterable 中的所有元素都为真值（或 iterable 为空），返回 True，否则返回 False
+- any()：`any(<iterable>)` 如果 iterable 中至少有一个元素为真值，返回 True，否则返回 False
 
 ## 字符串
 
