--- a/docs/OI/时间复杂度.md
+++ b/docs/OI/时间复杂度.md
@@ -8,3 +8,7 @@
 ## 快速幂
 
 快速幂是一种高效计算大整数幂的方法，时间复杂度为 O(log n)。其基本思想是利用指数的二进制表示，将幂运算分解为若干次平方和乘法运算。例如，要算2^10，它会先算2 * 2^9，再算 2 * 2 * 2^8……。利用了**倍增**思想后，如果指数是**偶数**，可以算2^(n/2)然后把它**平方**一下（`square`）就行了；如果指数是**奇数**，就先算2^(n-1)，变回偶数情况处理。将时间复杂度从 O(n) 降低到 O(log n)。
+
+## 有序列表的查找：从O(n^2)到O(n)
+
+使用双指针可以将有序列表的查找时间复杂度从 O(n^2) 降低到 O(n)。例如，在2个有序数组中寻找两个数，使它们相等。传统的双重循环方法需要 O(n^2) 的时间复杂度（嵌套循环），而使用双指针方法可以在 O(n) 的时间内完成。具体做法是：一个指针从数组1的开始位置向右移动，另一个指针从数组2的开始位置向右移动，根据当前两个指针所指元素进行比较，调整指针的位置。
