feat: 新增生物医学信号处理和Python库文档，详细描述心电信号的导联及os、wfdb、matplotlib和numpy模块的功能

--- a/docs/BME/生物医学信号处理.md
+++ b/docs/BME/生物医学信号处理.md
@@ -51,6 +51,7 @@ f(alias) = |f（实际） - k * fs|，并且要保证 f(alias) 落在 **0 Hz 到
 
 **心脏在跳动过程中产生的电活动信号**，通过贴在皮肤表面的电极采集。
 
+* **导联**：通过电极采集到的电压差。每一个导联记录的是两个特定点之间，或者一个点与一组参考点之间的电位变化。
 * **周期性**（与心跳一致）
 * **幅值**：约 **0.5–5 mV**
 * **频率范围**：**0.05–150 Hz**
