feat: 新增信号处理文档，详细描述噪声、滤波、采样及心电图和脑电图的处理流程

--- a/docs/BME/信号处理.md
+++ b/docs/BME/信号处理.md
@@ -1,8 +1,12 @@
-# 生物医学信号处理
+# 信号处理
 
 ## 噪声
 
 > 混在有用生物信号里的、无关或干扰成分。
+
+基线漂移 (Baseline Wander)：波形整体像海浪一样上下起伏。这通常是由于呼吸或身体晃动引起的（属于低频干扰）。
+
+高频噪声 (High-frequency Noise)：波形上有细小的锯齿。这可能是肌肉电信号 (EMG) 或设备电子噪声。
 
 ## 滤波
 
@@ -27,7 +31,7 @@
 
 > **Nyquist 频率 = 采样频率 / 2**
 
-**采样系统能够无失真地还原的最高信号频率**。任何高于这个频率的成分，在采样后都会发生畸变。因此，**被采样信号本身的最高频率成分必须小于 Nyquist 频率**。
+**采样系统能够无失真地还原的最高信号频率**。任何高于这个频率的成分，在采样后都会发生畸变，这样的采样是无效的。因此，我们希望，**被采样信号本身的最高频率成分小于 Nyquist 频率**。
 
 ## 混叠
 
