--- a/docs/Python/库.md
+++ b/docs/Python/库.md
@@ -42,6 +42,8 @@ matplotlib 的主要功能包括：
 - `matplotlib.pyplot.ylabel(<label>)`：设置 y 轴标签。
 - `matplotlib.pyplot.title(<title>)`：设置图表标题。
 - `matplotlib.pyplot.grid(<bool>, linestyle=<style>, alpha=<alpha>)`：显示或隐藏网格线，alpha 控制透明度。
+- `matplotlib.pyplot.scatter(x, y, color=<color>, marker=<marker>, zorder=<zorder>, label=<label>)`：绘制散点，可以设置颜色、标记样式、图层顺序和图例标签。
+- `matplotlib.pyplot.legend()`：显示图例。
 
 ## numpy
 
@@ -51,3 +53,32 @@ numpy 的主要功能包括：
 
 - `numpy.arange([start], stop, [step])`：创建等差数列数组(list)对象。
 - `numpy.linspace(start, stop, num)`：创建等间隔的数值数组。
+
+## scipy
+
+scipy 是一个用于科学计算的 Python 库，提供了许多用于优化、线性代数、信号处理等领域的函数和工具。
+
+scipy 的主要功能包括：
+
+- `scipy.signal.butter(N, Wn, btype='bandpass', analog=False, fs=None)`：巴特沃斯滤波器。`N (int)`: 滤波器的阶数，阶数越高，频带边缘的下降越陡峭。`Wn (array_like)`: 临界频率序列`[low, high]`。`btype`: 必须设置为 `'bandpass'`。`fs (float)`: 信号的采样频率（单位通常为 Hz）。
+
+`scipy.signal.butter` 在内部计算时，默认期望输入的截止频率是一个在 **0 到 1 之间** 的相对数值：
+
+* **0**：对应 0 Hz（直流分量）。
+* **1**：对应尼奎斯特频率。
+
+因此，`Wn` 中的频率值需要先除以 Nyquist 频率（采样频率的一半）进行归一化处理。
+
+该函数返回一个包含两个数组的元组：(b, a)。这两个数组定义了滤波器的传递函数，
+
+- b (numerator): 滤波器的分子系数数组。
+
+- a (denominator): 滤波器的分母系数数组。
+
+- `scipy.signal.filtfilt(b, a, x)`：使用零相位滤波器对信号进行滤波，避免相位失真。
+
+- `scipy.signal.find_peaks(x, height, distance)`：在一维数组中找到局部峰值。`height`: 峰值的最小高度，`distance`: 峰值之间的最小距离（以样本数为单位）。返回一个元组：
+
+第一个返回值 (peaks)：一个包含所有检测到的波峰**索引（位置）**的数组。这是最核心的数据。
+
+第二个返回值 (properties)：一个字典 (Dictionary)，包含了关于这些波峰的其他信息（前提是你设置了额外的参数）。
