feat: 新增numpy模块功能，添加离散差分和条件索引的说明

--- a/docs/Python/库.md
+++ b/docs/Python/库.md
@@ -53,6 +53,8 @@ numpy 的主要功能包括：
 
 - `numpy.arange([start], stop, [step])`：创建等差数列数组(list)对象。
 - `numpy.linspace(start, stop, num)`：创建等间隔的数值数组。
+- `numpy.diff(arr)`：计算数组的离散差分。
+- `numpy.where(condition)`：返回满足条件的元素的索引（元组）。
 
 ## scipy
 
